--- a/index.html
+++ b/index.html
@@ -1,3 +1,62 @@
+<b><h3>Project Proposal</h3></b>
 
-	For my final project, I have decided to create an application that allows users to check out study rooms based on how long a user will need a study room, how many study rooms are open, and how many students will be in the study room.  Users will open the browser and enter the above information and the system will search for open rooms are available for the time selected and can seat the correct amount of people.  If the criteria meet the users request then the user will be able to reserve the study room. If the user inputs criteria that is not available, the system will have them try for a different time to check out a study room.  I plan to use an SQL database to store the users information as well as the study rooms that are available to check out.  The use cases for my project are allowing users to enter the date, duration, location, and number of students for the study room, allowing users to then reserve the study room, and allowing users to cancel, move, or change their study room request.  For the project schedule, I plan(not necessarily in this order) to have: (1)the user interface, (2,3,4) each use case, (5)connecting to the server, and (6)final clean up/bug fixes done each week (one done per week).  I believe this project is interesting because there is a huge need for a simple way for this to be done. On campus now, I have using the online method of reserving a study room so I end up just calling the library and doing it myself because it is much easier.  If I can create a system that does this very easily and hassle-free, then I think there could be a very important use for it.  This project is a good test of my abilities because it incorporates many different aspects (servers, databases, timers, etc.) and will push me to learn new things that we have not already gone over in class this year or in past years.
+1.Project Description
+
+	For my final project, I have decided to create an application that allows users to check out study rooms based on how long a user will need a study room, how many study rooms are open, and how many students will be in the study room.  Users will open the browser and enter the above information and the system will search for open rooms are available for the time selected and can seat the correct amount of people.  If the criteria meet the users request then the user will be able to reserve the study room. If the user inputs criteria that is not available, the system will have them try for a different time to check out a study room.
+
+2.Project Design
+	I plan to use an SQL database to store the users information as well as the study rooms that are available to check out.  The use cases for my project are allowing users to enter the date, duration, location, and number of students for the study room, allowing users to then reserve the study room, and allowing users to cancel, move, or change their study room request.
+
+3.Project Schedule
+
+Checkpoint 1
+	oCreate Login and Registration functionality
+		Allow user to register a new account
+			•First Name
+			•Last Name
+			•Username
+			•Password
+		Users will be able to use newly created account info to log into the site 
+	oMySQL
+		Create database tables
+			•Users
+				oUserID, FirstName, LastName, Username, Password
+			•Study Rooms
+				oStudyRoomID, Location, RoomNumber. Availability
+			•Study Room Bookings
+				oUserID, StudyRoomID, Date, Time (From, To)
+		Allow program to write to the Users table with registration information
+		Program will grab created account info from database to log into the site through the login view
+•Checkpoint 2
+	oConnect to the Server
+	oCreate Views
+		Main View (Offers options to request a room, modify a booked room, and log out)
+		Schedule a Room View
+			•User enters
+				oLocation (drop down box with all possible locations)
+				oDate (enter in dialog box)
+				oTime (drop down box with all possible times in 30 minute intervals)
+
+		Scheduled Study Room List View
+			•List of all booked study rooms sorted by location, then date, and then time)
+		Successful booking View
+			•Shows when user submits a successful request to book a room
+		Unsuccessful booking View
+			•Shows when users submit an invalid or already booked room
+•Checkpoint 3
+	oAdd functionality to application
+		Store booking requests in the database
+			•Successful booking or unsuccessful booking page opens after user makes input
+		Scheduled Study Room List displays booked rooms in list form
+		Allow user to modify/delete the study rooms they have booked
+		Allow user to log off out of account
+•Final Checkpoint
+	oEnsure that the user logged on only has editing privilege to rooms they booked themselves
+	oHave program remove passed bookings
+	oIf booking is unsuccessful
+		Explain what the error was
+		Ensure data the user entered is not wiped when going to resubmit request
+
+4.Project Justification
+	I believe this project is interesting because there is a huge need for a simple way for this to be done. On campus now, I have using the online method of reserving a study room so I end up just calling the library and doing it myself because it is much easier.  If I can create a system that does this very easily and hassle-free, then I think there could be a very important use for it.  This project is a good test of my abilities because it incorporates many different aspects (servers, databases, timers, etc.) and will push me to learn new things that we have not already gone over in class this year or in past years.
 
