--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <b><h3>Project Proposal</h3></b>
-<p>
-1.Project Description
+<p><br>
+1.Project Description<br>
 
 	For my final project, I have decided to create an application that allows users to check out study rooms based on how long a user will need a study room, how many study rooms are open, and how many students will be in the study room.  Users will open the browser and enter the above information and the system will search for open rooms are available for the time selected and can seat the correct amount of people.  If the criteria meet the users request then the user will be able to reserve the study room. If the user inputs criteria that is not available, the system will have them try for a different time to check out a study room.
-
+<br><br>
 2.Project Design
 	I plan to use an SQL database to store the users information as well as the study rooms that are available to check out.  The use cases for my project are allowing users to enter the date, duration, location, and number of students for the study room, allowing users to then reserve the study room, and allowing users to cancel, move, or change their study room request.
-
+<br><br>
 3.Project Schedule
 
 Checkpoint 1
-	oCreate Login and Registration functionality
-		Allow user to register a new account
-			•First Name
-			•Last Name
-			•Username
-			•Password
-		Users will be able to use newly created account info to log into the site 
+<ul>
+<li>Create Login and Registration functionality
+<ul><li>Allow user to register a new account
+			<ul><li>First Name
+			<li>Last Name
+			<li>Username
+			<li>Password</ul>
+	<li>Users will be able to use newly created account info to log into the site</ul>
 	oMySQL
 		Create database tables
 			•Users
