--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	I plan to use an SQL database to store the users information as well as the study rooms that are available to check out.  The use cases for my project are allowing users to enter the date, duration, location, and number of students for the study room, allowing users to then reserve the study room, and allowing users to cancel, move, or change their study room request.
 <br><br>
 3.Project Schedule
-
+<br>
 Checkpoint 1
 <ul>
 <li>Create Login and Registration functionality
@@ -18,16 +18,14 @@ Checkpoint 1
 			<li>Username
 			<li>Password</ul>
 	<li>Users will be able to use newly created account info to log into the site</ul>
-	oMySQL
-		Create database tables
-			•Users
-				oUserID, FirstName, LastName, Username, Password
-			•Study Rooms
-				oStudyRoomID, Location, RoomNumber. Availability
-			•Study Room Bookings
-				oUserID, StudyRoomID, Date, Time (From, To)
-		Allow program to write to the Users table with registration information
-		Program will grab created account info from database to log into the site through the login view
+	<li>MySQL
+		<ul><li>Create database tables
+			<ul><li>Users
+			<li>Study Rooms
+			<li>Study Room Bookings</ul>
+		<li>Allow program to write to the Users table with registration information
+		<li>Program will grab created account info from database to log into the site through the login view</ul>
+<br>		
 •Checkpoint 2
 	oConnect to the Server
 	oCreate Views
