--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Checkpoint 1
 			<li>Study Rooms
 			<li>Study Room Bookings</ul>
 		<li>Allow program to write to the Users table with registration information
-		<li>Program will grab created account info from database to log into the site through the login view</ul>
+		<li>Program will grab created account info from database to log into the site through the login view</ul></ul>
 <br>		
 •Checkpoint 2
 	oConnect to the Server
