--- a/index.html
+++ b/index.html
@@ -26,36 +26,40 @@ Checkpoint 1
 		<li>Allow program to write to the Users table with registration information
 		<li>Program will grab created account info from database to log into the site through the login view</ul></ul>
 <br>		
-•Checkpoint 2
-	oConnect to the Server
-	oCreate Views
-		Main View (Offers options to request a room, modify a booked room, and log out)
-		Schedule a Room View
-			•User enters
-				oLocation (drop down box with all possible locations)
-				oDate (enter in dialog box)
-				oTime (drop down box with all possible times in 30 minute intervals)
+Checkpoint 2
+	<ul>
+	<li>Connect to the Server
+	<li>Create Views
+		<ul><li>Main View (Offers options to request a room, modify a booked room, and log out)
+		<li>Schedule a Room View
+			<ul><li>User enters
+				<ul><li>Location (drop down box with all possible locations)
+				<li>Date (enter in dialog box)
+				<li>Time (drop down box with all possible times in 30 minute intervals)</ul></ul>
 
-		Scheduled Study Room List View
-			•List of all booked study rooms sorted by location, then date, and then time)
-		Successful booking View
-			•Shows when user submits a successful request to book a room
-		Unsuccessful booking View
-			•Shows when users submit an invalid or already booked room
-•Checkpoint 3
-	oAdd functionality to application
-		Store booking requests in the database
-			•Successful booking or unsuccessful booking page opens after user makes input
-		Scheduled Study Room List displays booked rooms in list form
-		Allow user to modify/delete the study rooms they have booked
-		Allow user to log off out of account
-•Final Checkpoint
-	oEnsure that the user logged on only has editing privilege to rooms they booked themselves
-	oHave program remove passed bookings
-	oIf booking is unsuccessful
-		Explain what the error was
-		Ensure data the user entered is not wiped when going to resubmit request
-
+		<li>Scheduled Study Room List View
+			<ul><li>List of all booked study rooms sorted by location, then date, and then time)</ul>
+		<li>Successful booking View
+			<ul><li>Shows when user submits a successful request to book a room</ul>
+		<li>Unsuccessful booking View
+			<ul><li>Shows when users submit an invalid or already booked room</ul></ul>
+		</ul>	
+Checkpoint 3
+	<ul><li>Add functionality to application
+		<ul><li>Store booking requests in the database
+			<ul><li>Successful booking or unsuccessful booking page opens after user makes input</ul>
+		<li>Scheduled Study Room List displays booked rooms in list form
+		<li>Allow user to modify/delete the study rooms they have booked
+		<li>Allow user to log off out of account</ul>
+	</ul>
+Final Checkpoint
+	<ul><li>Ensure that the user logged on only has editing privilege to rooms they booked themselves
+	<li>Have program remove passed bookings
+	<li>If booking is unsuccessful
+		<ul><li>Explain what the error was
+		<li>Ensure data the user entered is not wiped when going to resubmit request</ul>
+</ul>
+<br><br>
 4.Project Justification
 	I believe this project is interesting because there is a huge need for a simple way for this to be done. On campus now, I have using the online method of reserving a study room so I end up just calling the library and doing it myself because it is much easier.  If I can create a system that does this very easily and hassle-free, then I think there could be a very important use for it.  This project is a good test of my abilities because it incorporates many different aspects (servers, databases, timers, etc.) and will push me to learn new things that we have not already gone over in class this year or in past years.
 </p>
