--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <b><h3>Project Proposal</h3></b>
 <p><br>
-1.Project Description<br>
+<h4>1.Project Description</h4><br>
 
 	For my final project, I have decided to create an application that allows users to check out study rooms based on how long a user will need a study room, how many study rooms are open, and how many students will be in the study room.  Users will open the browser and enter the above information and the system will search for open rooms are available for the time selected and can seat the correct amount of people.  If the criteria meet the users request then the user will be able to reserve the study room. If the user inputs criteria that is not available, the system will have them try for a different time to check out a study room.
 <br><br>
-2.Project Design
+<h4>2.Project Design</h4><br>
 	I plan to use an SQL database to store the users information as well as the study rooms that are available to check out.  The use cases for my project are allowing users to enter the date, duration, location, and number of students for the study room, allowing users to then reserve the study room, and allowing users to cancel, move, or change their study room request.
 <br><br>
-3.Project Schedule
+<h4>3.Project Schedule</h4>
 <br>
-Checkpoint 1
+<u>Checkpoint 1</u>
 <ul>
 <li>Create Login and Registration functionality
 <ul><li>Allow user to register a new account
@@ -26,7 +26,7 @@ Checkpoint 1
 		<li>Allow program to write to the Users table with registration information
 		<li>Program will grab created account info from database to log into the site through the login view</ul></ul>
 <br>		
-Checkpoint 2
+<u>Checkpoint 2</u>
 	<ul>
 	<li>Connect to the Server
 	<li>Create Views
@@ -44,7 +44,7 @@ Checkpoint 2
 		<li>Unsuccessful booking View
 			<ul><li>Shows when users submit an invalid or already booked room</ul></ul>
 		</ul>	
-Checkpoint 3
+<u>Checkpoint 3</u>
 	<ul><li>Add functionality to application
 		<ul><li>Store booking requests in the database
 			<ul><li>Successful booking or unsuccessful booking page opens after user makes input</ul>
@@ -52,7 +52,7 @@ Checkpoint 3
 		<li>Allow user to modify/delete the study rooms they have booked
 		<li>Allow user to log off out of account</ul>
 	</ul>
-Final Checkpoint
+<u>Final Checkpoint</u>
 	<ul><li>Ensure that the user logged on only has editing privilege to rooms they booked themselves
 	<li>Have program remove passed bookings
 	<li>If booking is unsuccessful
@@ -60,6 +60,6 @@ Final Checkpoint
 		<li>Ensure data the user entered is not wiped when going to resubmit request</ul>
 </ul>
 <br><br>
-4.Project Justification
+<h4>4.Project Justification</h4>
 	I believe this project is interesting because there is a huge need for a simple way for this to be done. On campus now, I have using the online method of reserving a study room so I end up just calling the library and doing it myself because it is much easier.  If I can create a system that does this very easily and hassle-free, then I think there could be a very important use for it.  This project is a good test of my abilities because it incorporates many different aspects (servers, databases, timers, etc.) and will push me to learn new things that we have not already gone over in class this year or in past years.
 </p>
