--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
 		<li>Ensure data the user entered is not wiped when going to resubmit request</ul>
 </ul>
 <br><br>
-<h4>4.Project Justification</h4>
+<h4>4.Project Justification</h4><br>
 	I believe this project is interesting because there is a huge need for a simple way for this to be done. On campus now, I have using the online method of reserving a study room so I end up just calling the library and doing it myself because it is much easier.  If I can create a system that does this very easily and hassle-free, then I think there could be a very important use for it.  This project is a good test of my abilities because it incorporates many different aspects (servers, databases, timers, etc.) and will push me to learn new things that we have not already gone over in class this year or in past years.
 </p>
