--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html><body>
 <b><h3>Project Proposal</h3></b>
-p {margin: 35px;}	
-<p><br>
+	
+<p{margin: 35px;}><br>
 <h4>1.Project Description</h4><br>
 
 	For my final project, I have decided to create an application that allows users to check out study rooms based on how long a user will need a study room, how many study rooms are open, and how many students will be in the study room.  Users will open the browser and enter the above information and the system will search for open rooms are available for the time selected and can seat the correct amount of people.  If the criteria meet the users request then the user will be able to reserve the study room. If the user inputs criteria that is not available, the system will have them try for a different time to check out a study room.
