--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-<html><body>
-<b><h3>Project Proposal</h3></b>
+<html><body{margin: 500px;}>
+<b><h2>Project Proposal</h2></b>
 	
 <p{margin: 200px;}><br>
 <h4>1.Project Description</h4><br>
