--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-theme: jekyll-theme-slate
-<html><body{margin: 500px;}>
+
+<html theme: jekyll-theme-slate><body{margin: 500px;}>
 <b><h2>Project Proposal</h2></b>
 	
 <p{margin: 200px;}><br>
