--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 <p{margin: 200px;}><br>
 <h4>1.Project Description</h4><br>
 
-	For my final project, I have decided to create an application that allows users to check out study rooms based on how long a user will need a study room, how many study rooms are open, and how many students will be in the study room.  Users will open the browser and enter the above information and the system will search for open rooms are available for the time selected and can seat the correct amount of people.  If the criteria meet the users request then the user will be able to reserve the study room. If the user inputs criteria that is not available, the system will have them try for a different time to check out a study room.  Because it will be very hard to input every single building and every single study room in that building on a campus, I will be populating the studyroom building locations and room numbers myself.
+	For my final project, I have decided to create an application that allows users to check out study rooms based on what date they need the room, how long they will need a study room, and how many study rooms are open.  Users will open the browser and enter the above information and the system will search for which rooms are available for the time selected.  If the criteria for an open room meets the users request, then the user will be able to reserve the study room. If the user inputs a request that does not meet the criteria for an open room, the system will explain the error and have them try inputting a different date, time, and/or location to check out a study room.  Because it will be very hard to input every single building and every single study room in that building on a campus, I will be populating the studyroom building locations and room numbers myself to simulate how the system would work.
 <br><br>
 <h4>2.Project Design</h4><br>
-	I plan to use an SQL database to store the users information as well as the study rooms that are available to check out.  The use cases for my project are allowing users to enter the date, duration, location, and number of students for the study room, allowing users to then reserve the study room, and allowing users to cancel, move, or change their study room request.
+	I plan to use an SQL database to store the users information as well as the study rooms that are available to check out.  The use cases for my project are allowing users to enter the date, duration, and location to request the study room, allowing users to then reserve the study room, and allowing users to cancel, move, or change their study room request.
 <br><br>
 <h4>3.Project Schedule</h4>
 <br>
@@ -64,6 +64,6 @@
 </ul>
 <br><br>
 <h4>4.Project Justification</h4><br>
-	I believe this project is interesting because there is a huge need for a simple way for this to be done. On campus now, I have using the online method of reserving a study room so I end up just calling the library and doing it myself because it is much easier.  If I can create a system that does this very easily and hassle-free, then I think there could be a very important use for it.  This project is a good test of my abilities because it incorporates many different aspects (servers, databases, timers, etc.) and will push me to learn new things that we have not already gone over in class this year or in past years.
+	I believe this project is interesting because there is a huge need for a simple way for this to be done. On campus now, the online method of reserving a study room is very difficult and takes some time after you make the request before you know you if you have a guarenteed study room. I end up just calling the library and doing it manually because it is much easier.  If I can create a system that does this very easily and hassle-free, then I think there could be a very important use for it.  This project is a good test of my abilities because it incorporates many different aspects (servers, databases, timers, etc.) and will push me to learn new things that we have not already gone over in class this year or in past years.
 </p>
 </body></html>
