--- a/index.html
+++ b/index.html
@@ -14,23 +14,6 @@
 <br>
 <u>Checkpoint 1</u>
 <ul>
-<li>Create Login and Registration functionality
-<ul><li>Allow user to register a new account
-			<ul><li>First Name
-			<li>Last Name
-			<li>Username
-			<li>Password</ul>
-	<li>Users will be able to use newly created account info to log into the site</ul>
-	<li>MySQL
-		<ul><li>Create database tables
-			<ul><li>Users
-			<li>Study Rooms
-			<li>Study Room Bookings</ul>
-		<li>Allow program to write to the Users table with registration information
-		<li>Program will grab created account info from database to log into the site through the login view</ul></ul>
-<br>		
-<u>Checkpoint 2</u>
-	<ul>
 	<li>Connect to the Server
 	<li>Create Views
 		<ul><li>Main View (Offers options to request a room, modify a booked room, and log out)
@@ -46,6 +29,26 @@
 			<ul><li>Shows when user submits a successful request to book a room</ul>
 		<li>Unsuccessful booking View
 			<ul><li>Shows when users submit an invalid or already booked room</ul></ul>
+
+	</ul>
+<br>		
+<u>Checkpoint 2</u>
+	<ul>
+		<li>Create Login and Registration functionality
+<ul><li>Allow user to register a new account
+			<ul><li>First Name
+			<li>Last Name
+			<li>Username
+			<li>Password</ul>
+	<li>Users will be able to use newly created account info to log into the site</ul>
+	<li>MySQL
+		<ul><li>Create database tables
+			<ul><li>Users
+			<li>Study Rooms
+			<li>Study Room Bookings</ul>
+		<li>Allow program to write to the Users table with registration information
+		<li>Program will grab created account info from database to log into the site through the login view</ul>
+	
 		</ul>	
 <u>Checkpoint 3</u>
 	<ul><li>Add functionality to application
