--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <ul>
 	<li>Connect to the Server
 	<li>Create Views
-		<ul><li>Main View (Offers options to request a room, modify a booked room, and log out)
+		<li>Login View
+			<ul><li>Shows when user types in localhost:8080/MorehouseFinalProject/Login. Allows user to log in with hard coded username "user" and password "user".  User will be able to access rest of application with that input</ul>
+		<ul><li>Main View (Offers options to request a room, check booked rooms, and log out)
 		<li>Schedule a Room View
 			<ul><li>User enters
 				<ul><li>Location (drop down box with all possible locations)
@@ -25,10 +27,12 @@
 
 		<li>Scheduled Study Room List View
 			<ul><li>List of all booked study rooms sorted by location, then date, and then time)</ul>
-		<li>Successful booking View
-			<ul><li>Shows when user submits a successful request to book a room</ul>
-		<li>Unsuccessful booking View
-			<ul><li>Shows when users submit an invalid or already booked room</ul></ul>
+			<li>Login View
+			<ul><li>Shows when user types in localhost:8080/MorehouseFinalProject/Login. Allows user to log in with hard coded username "user" and password "user".  User will be able to access rest of application with that input</ul>
+		<li>Logout View
+			<ul><li>Shows when user successfully logs out</ul>
+		<li>Unsuccessful Login view
+			<ul><li>Shows when users submit an invalid username or password</ul></ul>
 
 	</ul>
 <br>		
