--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <u>Checkpoint 1</u>
 <ul>
 	<li>Connect to the Server
+		<ul><li>Using Glassfish remote server</ul>
 	<li>Create Views
 		<li>Login View
 			<ul><li>Shows when user types in localhost:8080/MorehouseFinalProject/Login. Allows user to log in with hard coded username "user" and password "user".  User will be able to access rest of application with that input</ul>
