--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
 
 	<li>Connect to the Server
 		<ul><li>Using Glassfish remote server</ul>
-	<ul><li>Create Views
-		<li>Login View
+	<li>Create Views
+		<ul><li>Login View
 			<ul><li>Shows when user types in localhost:8080/MorehouseFinalProject/Login. Allows user to log in with hard coded username "user" and password "user".  User will be able to access rest of application with that input</ul>
 		<ul><li>Main View (Offers options to request a room, check booked rooms, and log out)
 		<li>Schedule a Room View
