--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <b><h2>Project Proposal</h2></b>
 	
 <p{margin: 200px;}><br>
+	<h3>Github repository:https://github.com/bmorehouse33/MorehouseFinalProject</3>	
 <h4>1.Project Description</h4><br>
 
 	For my final project, I have decided to create an application that allows users to check out study rooms based on what date they need the room, how long they will need a study room, and how many study rooms are open.  Users will open the browser and enter the above information and the system will search for which rooms are available for the time selected.  If the criteria for an open room meets the users request, then the user will be able to reserve the study room. If the user inputs a request that does not meet the criteria for an open room, the system will explain the error and have them try inputting a different date, time, and/or location to check out a study room.  Because it will be very hard to input every single building and every single study room in that building on a campus, I will be populating the studyroom building locations and room numbers myself to simulate how the system would work.
