--- a/index.html
+++ b/index.html
@@ -105,21 +105,19 @@
                   <li>Successful booking or unsuccessful booking page opens after user makes input
                </ul>
             <li>Scheduled Study Room List displays booked rooms in list form
-            <li>Allow user to modify/delete the study rooms they have booked
+            <li>Allow user to delete the study rooms they have booked
             <li>Allow user to log off out of account
+            <li>Ensure that the user logged on only has deletion privilege to rooms they booked themselves
+            <li>Have program remove passed bookings
+            <li>If booking is unsuccessful               
+               <ul>
+                  <li>Explain what the error was
+               </ul>
+             <li>Have program remove passed bookings
          </ul>
    </ul>
-   <u>Final Checkpoint</u>
-   <ul>
-      <li>Ensure that the user logged on only has editing privilege to rooms they booked themselves
-      <li>Have program remove passed bookings
-      <li>
-         If booking is unsuccessful
-         <ul>
-            <li>Explain what the error was
-            <li>Ensure data the user entered is not wiped when going to resubmit request
-         </ul>
-   </ul>
+
+      
    <br><br>
    <h4>4.Project Justification</h4>
    <br>
