--- a/index.html
+++ b/index.html
@@ -115,6 +115,9 @@
                </ul>
              <li>Have program remove passed bookings
          </ul>
+         <u>Final Checkpoint</u>
+   <ul>
+      <li>Final clean up an bug fixes
    </ul>
 
       
