--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html theme: jekyll-theme-slate>
    <body{margin: 500px;}>
    <b>
@@ -12,7 +11,7 @@
    <br><br>
    <h4>2.Project Design</h4>
    <br>
-   I plan to use an SQL database to store the users information as well as the study rooms that are available to check out.  The use cases for my project are allowing users to enter the date, duration, and location to request the study room, allowing users to then reserve the study room, and allowing users to cancel, move, or change their study room request.
+   I plan to use an SQL database to store the users information as well as the study rooms that are available to check out.  The use cases for my project are allowing users to enter the date, duration, and location to request the study room, allowing users to then reserve the study room, and allowing users to cancel their study room request.
    <br><br>
    <h4>3.Project Schedule</h4>
    <br>
@@ -103,24 +102,43 @@
                Store booking requests in the database
                <ul>
                   <li>Successful booking or unsuccessful booking page opens after user makes input
+					<ul>
+						<li>Successful booking
+							<ul>
+								<li>Booking time is not before local time and does not overlap with any other current booking				  
+							</ul>
+					</ul>
+					<ul>
+						<li>Unuccessful booking
+							<ul>
+								<li>If booking time selected is before local time or conflicts with another previously booked studyroom				  
+							</ul>						
+					</ul>
                </ul>
-            <li>Scheduled Study Room List displays booked rooms in list form
-            <li>Allow user to delete the study rooms they have booked
-            <li>Allow user to log off out of account
-            <li>Ensure that the user logged on only has deletion privilege to rooms they booked themselves
+            <li>Scheduled Study Room List displays booked rooms from database in table form
+					<ul>
+						<li>System will delete bookings whos end times are before the local time				  
+					</ul>
+            <li>Allow user to delete the study rooms they have booked and remove from database
+            
+            <li>Ensure that the user logged on only has deletion privilege to rooms they booked themselves by checking the current user to the one connected to the booking
+					<ul>
+						<li>If user deletes a studyroom booking request that they created, redirect to successful delete page	
+						<li>If user deletes a studyroom booking request that another user has created, redirect to unsuccessful delete page and let user know they can only delete their own bookings
+					</ul>
             <li>Have program remove passed bookings
-            <li>If booking is unsuccessful               
+            <li>
+               If booking is unsuccessful               
                <ul>
-                  <li>Explain what the error was
+                  <li>Explain there was an error
                </ul>
-             <li>Have program remove passed bookings
+			<li>Allow user to log off out of account   
          </ul>
-         <u>Final Checkpoint</u>
+   </ul>
+   <u>Final Checkpoint</u>
    <ul>
       <li>Final clean up an bug fixes
    </ul>
-
-      
    <br><br>
    <h4>4.Project Justification</h4>
    <br>
